@startuml
@startuml


package Model{

    class Habit {
        + name: String
        + priority: Priority
        + isDone: Boolean
    }

    Habit *- HabitPriority

    Habit *- HabitStatus
}

package View{
    class InitialLoginView{
    }

    class HomeView {
    }

    class SettingsView{
    }
}

package ViewModel{
    class SignupViewModel{
        login()
        user: User
        pets: List<Pet>
    }
    class HomeViewModel {
        addHabit()
        markHabitDone()
        user: User
    }
    class SettingsViewModel{
        userSettings: UserSettings
        saveSettings()
    }
}

package Repository{
    class UserRepository {
        getUser()
        saveUser()
    }

    class HabitRepository {
        getHabits()
        saveHabit()
        updateHabit()
    }
}
package DAO{
    class UserDAO


    class HabitDAO
}

class AppConfig{
    pets: List<Pet>
}

AppConfig o-- Pet
InitialLoginView .down.> InitialLoginViewModel
HomeView .down.> HomeViewModel
SettingsView .down.> SettingsViewModel

InitialLoginViewModel .down..> UserRepository

HomeViewModel .down> HabitRepository
HomeViewModel .down> UserRepository

SettingsViewModel .down.> UserRepository


UserRepository ..down> UserDAO
HabitRepository ..down> HabitDAO


UserDAO -down-> User
HabitDAO -down-> Habit
@enduml

@enduml
